@@ -38,6 +38,8 @@ enum {
     NAT_RAND_PORT,
     TIME_OFFSET_MINUS,
     TIME_OFFSET_PLUS,
+    NO_SAVE_ARGS,
+    SHOW_LAST_ARGS,
     /* Put GPG-related items below the following line */
     GPG_ENCRYPTION      = 0x200,
     GPG_RECIP_KEY,
@@ -55,6 +57,7 @@ static struct option cmd_opts[] =
     {"access",              1, NULL, 'A'},
     {"save-packet-append",  0, NULL, 'b'},
     {"save-packet",         1, NULL, 'B'},
+    {"no-save",             0, NULL, NO_SAVE_ARGS},
     {"server-command",      1, NULL, 'C'},
     {"digest-type",         1, NULL, FKO_DIGEST_NAME},
     {"destination",         1, NULL, 'D'},
@@ -76,6 +79,7 @@ static struct option cmd_opts[] =
     {"quiet",               0, NULL, 'q'},
     {"rand-port",           0, NULL, 'r'},
     {"spoof-src",           1, NULL, 'Q'},
+    {"show-last",           0, NULL, SHOW_LAST_ARGS},
     {"source-port",         1, NULL, 'S'},
     {"test",                0, NULL, 'T'},
     {"time-offset-plus",    1, NULL, TIME_OFFSET_PLUS},
